template footer agregado

--- a/proyecto_org/src/components/Welcome.astro
+++ b/proyecto_org/src/components/Welcome.astro
@@ -4,7 +4,6 @@ import background from '../assets/background.svg';
 ---
 
 <div id="container">
-	
 	<main>
 		
 	</main>
@@ -29,6 +28,7 @@ import background from '../assets/background.svg';
 
 	main {
 		height: 100%;
+		width: 100%;
 		display: flex;
 		justify-content: center;
 		background-color: rgba(0, 0, 0, 0);
