--- a/proyecto_org/src/components/Welcome.astro
+++ b/proyecto_org/src/components/Welcome.astro
@@ -1,46 +1,12 @@
 ---
-import astroLogo from '../assets/astro.svg';
-import background from '../assets/background.svg';
 ---
 
-<div id="container">
-	<main>
-		
-	</main>
+<div id="welcome-container">
+	<!-- Espacio para intro si se añade contenido más adelante -->
 </div>
 
 <style>
-	#background {
-		position: fixed;
-		top: 0;
-
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: -1;
-		filter: blur(100px);
+	#welcome-container {
+		margin-bottom: 1rem;
 	}
-
-	#container {
-		font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
-		height: 100%;
-	}
-
-	main {
-		height: 100%;
-		width: 100%;
-		display: flex;
-		justify-content: center;
-		background-color: rgba(0, 0, 0, 0);
-	}
-	
-	
-
-	
-
-	
-
-
-	
-
-	
+</style>
