--- a/proyecto_org/src/pages/index.astro
+++ b/proyecto_org/src/pages/index.astro
@@ -3,12 +3,15 @@ import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 import Head from '../components/header.astro';
 import Footer from '../components/footer.astro';
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import MainPanel from '../components/MainPanel.astro';
+import ComponentsInfoPanel from '../components/ComponentsInfoPanel.astro';
 ---
 
 <Layout>
 	<Head />
-	<Welcome />
+	<MainPanel>
+		<Welcome />
+		<ComponentsInfoPanel />
+	</MainPanel>
 	<Footer />
 </Layout>
