--- a/proyecto_org/src/components/MainPanel.astro
+++ b/proyecto_org/src/components/MainPanel.astro
@@ -7,8 +7,10 @@
 
 <style>
 	.main-panel {
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 		max-width: 64rem;
 		margin: 0 auto;
+		margin-top: 10rem;
 		padding: 1rem 1.5rem 1.5rem;
 		border-radius: 0.9rem;
 		border: 1px solid rgba(148, 163, 184, 0.5);
