--- a/proyecto_org/src/components/header.astro
+++ b/proyecto_org/src/components/header.astro
@@ -8,7 +8,7 @@ import pc from '../assets/pcicon.png';
 		<div id="head_subdiv">
 			<nav id="nav_head" class="nav_head">
 				<div class="logo">
-					<a href="" target="_self">
+					<a href="/" target="_self">
 						<img src={pc.src} alt="PC Image" id="img_pc" />
 						<div class="content_dd">
 							<p class="text_logo">Home</p>
@@ -31,7 +31,7 @@ import pc from '../assets/pcicon.png';
 						</a>
 					</li>
 					<li id = "nav_subelement">
-						<a href="">
+						<a href="/simulation">
 							Simulacion
 						</a>
 					</li>
@@ -46,7 +46,9 @@ import pc from '../assets/pcicon.png';
 
 header{
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	position: relative;
 }
+
 	#nav_head{
 		display: flex;
 		align-items: center;
