--- a/proyecto_org/src/pages/simulation.astro
+++ b/proyecto_org/src/pages/simulation.astro
@@ -5,12 +5,12 @@ import Head from '../components/header.astro';
 import Footer from '../components/footer.astro';
 import MainPanel from '../components/MainPanel.astro';
 import ComponentsInfoPanel from '../components/ComponentsInfoPanel.astro';
+import Simu from '../components/simulationView.astro';
 ---
+
 
 <Layout>
 	<Head />
-	<MainPanel>
-		<ComponentsInfoPanel />
-	</MainPanel>
+	    <Simu />
 	<Footer />
 </Layout>
