--- a/proyecto_org/src/components/simulationView.astro
+++ b/proyecto_org/src/components/simulationView.astro
@@ -144,31 +144,31 @@ import  '../components/simulation.css';
         <div class="alu">
           <h3>Alu</h3>
           <div class="stor">
-            <button class="AC">AC</button>
-            <button class="MQ">MQ</button>
+            <button data-info="Acumulador" class="AC">AC</button>
+            <button data-info="Multiplicador" class="MQ">MQ</button>
           </div>
-          <button class="big-alu">
+          <button  data-info="Unidad Aritmético Lógica" class="big-alu">
             Unidad Aritmético Lógica
           </button>
-          <button class="MBR">
+          <button data-info="Registro de Memoria Básica" class="MBR">
             MBR
           </button>
         </div>
         <div class="cc">
           <h3>CC</h3>
           <div class="state">
-            <button class="PC">
+            <button data-info="Contador de Programa" class="PC">
               PC
             </button>
-            <button class="IBR">
+            <button data-info="Buffer de inst." class="IBR">
               IBR
             </button>
           </div>
           <div class="inst">
-            <button class="MAR">
+            <button data-info="Registro de direccion" class="MAR">
               MAR
             </button>
-            <button class="IR">
+            <button data-info="Codigo de inst." class="IR">
               IR
             </button>
           </div>
