Agregue package-lock.json y actualice los componentes de pie de página y encabezado con nueva información para desarrolladores y enlaces de navegación

--- a/proyecto_org/src/components/footer.astro
+++ b/proyecto_org/src/components/footer.astro
@@ -11,12 +11,11 @@
             <h3>Desarrollado por:</h3>
             <div class="devs">
                 <div class="developer-info1">
-                    <p>Jorge Luis Rodriguez</p>
-                    <p>Yuliana Rodriguez</p>
+                    <p>Luis Jiménez</p>
+                    <p>Miguel Urbina</p>
                 </div>
                 <div class="developer-info2">
-                    <p>Yuliana Rodriguez</p>
-                    <p>Yuliana Rodriguez</p>
+                    <p>Osmar Porras</p>
                 </div>
             </div>
         </div>
