--- a/proyecto_org/src/components/header.astro
+++ b/proyecto_org/src/components/header.astro
@@ -21,15 +21,10 @@ import pc from '../assets/pcicon.png';
 				
 				<ul id="nav_elements">
 					<li id = "nav_subelement">
-						<a href="">
+						<a href="/#componentes-interactivos">
 							Arquitectura
 						</a>
 					</li >
-					<li id = "nav_subelement">
-						<a href="">
-							Componentes
-						</a>
-					</li>
 					<li id = "nav_subelement">
 						<a href="/simulation">
 							Simulacion
@@ -69,7 +64,7 @@ header{
 		display: flex;
 		flex-direction: row;
 		gap: 2rem;
-		margin-left: 44vw;
+		margin-left: 60vw;
 		margin-right: 0%;
 	}
 	
